<resources>
    <string name="app_name">MyTranslator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_text">Input text</string>
    <string name="history">History</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="content">content</string>
    <string name="example">Example Example ExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExample</string>
    <string name="not_found">Not found!</string>
    <string name="favorite">Favorite</string>
</resources>