<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    android:padding="@dimen/_8sdp"
    tools:context=".fragments.MainTranslationFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorite_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="0dp"
        app:icon="@drawable/ic_bookmark"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/input_card"
        style="@style/DefaultCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardBackgroundColor="@color/gray_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/label_lin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/english"
                    android:textSize="@dimen/_15ssp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/content"
                    android:src="@drawable/ic_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/russian"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/label_lin_layout" />

            <EditText
                android:id="@+id/input_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:gravity="bottom"
                android:hint="@string/input_text"
                android:inputType="textMultiLine"
                android:maxHeight="@dimen/_160sdp"
                android:minHeight="@dimen/_80sdp"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:scrollbars="vertical"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintEnd_toStartOf="@id/delete_input_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_lin_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_input_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:padding="0dp"
                app:icon="@drawable/ic_cross"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/copy_input_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:padding="0dp"
                app:icon="@drawable/ic_copy"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/input_et"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginBottom="8dp"
                android:padding="0dp"
                app:icon="@drawable/ic_search"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="@id/input_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/copy_input_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/output_card"
        style="@style/DefaultCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/output_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:autofillHints=""
                android:clickable="false"
                android:focusable="false"
                android:gravity="bottom"
                android:inputType="none"
                android:maxHeight="@dimen/_160sdp"
                android:minHeight="@dimen/_80sdp"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@id/copy_output_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/copy_output_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:padding="0dp"

                app:icon="@drawable/ic_copy"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/history_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/history"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/output_card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_all_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:padding="0dp"

        app:icon="@drawable/ic_garbage"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="@id/history_tv"
        app:layout_constraintBottom_toBottomOf="@id/history_tv"
        app:layout_constraintEnd_toEndOf="parent"
       />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>